[package]
name = "metro"
version = "0.1.0"
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
lv2-atom = { git = "https://github.com/RustAudio/rust-lv2.git" }
lv2-core = { git = "https://github.com/RustAudio/rust-lv2.git" }
lv2-time = { git = "https://github.com/RustAudio/rust-lv2.git" }
lv2-units = { git = "https://github.com/RustAudio/rust-lv2.git" }
lv2-urid = { git = "https://github.com/RustAudio/rust-lv2.git" }
lv2-sys= { git = "https://github.com/RustAudio/rust-lv2.git" }

[patch."https://github.com/RustAudio/rust-lv2.git"]
lv2-atom = { git = "https://github.com/YruamaLairba/rust-lv2.git", branch = 'time_spec' }
lv2-core = { git = "https://github.com/YruamaLairba/rust-lv2.git", branch = 'time_spec' }
lv2-time = { git = "https://github.com/YruamaLairba/rust-lv2.git", branch = 'time_spec' }
lv2-units = { git = "https://github.com/YruamaLairba/rust-lv2.git", branch = 'time_spec' }
lv2-urid = { git = "https://github.com/YruamaLairba/rust-lv2.git", branch = 'time_spec' }
lv2-sys= { git = "https://github.com/YruamaLairba/rust-lv2.git", branch = 'time_spec' }

